<resources>
    <string name="app_name">Note it</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="newUser1">Not a Member yet?</string>
    <string name="newUser2">Sign Up here.</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">register</string>
    <string name="oldUser1">Already have account ?</string>
    <string name="oldUser2">Login here .</string>
    <string name="home">Home</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="reset_password">Reset password</string>
    <string name="user_name">User name</string>
    <string name="night_mode">Night Mode</string>
    <string name="welcome">Welcome</string>
    <string name="restored_list">Restored List</string>
    <string name="received_notes">Received Notes</string>
    <string name="settings">Settings</string>
    <string name="welcome_guest">Welcome Guest!</string>
    <string name="guest">Guest</string>
    <string name="edit_note">Edit Note</string>
    <string name="add_note">Add Note</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="alarm_note">Alarm Note</string>
    <string name="set_alarm_title">Set Alarm Title</string>
    <string name="next">Next</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="pick_day">Pick Day</string>
    <string name="all_correct">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="lock">Lock</string>
    <string name="empty_field">Empty Field !</string>
    <string name="note_saved">Note Saved</string>
    <string name="enter_username">Enter Username</string>
    <string name="choose_receiver">Choose Receiver</string>
    <string name="send">Send</string>
    <string name="wrong_username">Wrong username!</string>
    <string name="error">Error</string>
    <string name="you_cant_send_message_to_your_self">You Cannot send a message to yourself</string>
    <string name="you_have_to_enter_username">You have to enter a username</string>
    <string name="note_sent_to">Note sent to</string>
    <string name="favorite">Favorite</string>
    <string name="delete">Delete</string>
    <string name="choose_option">Choose Option</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="mark_as_favorite">You will mark this note as Favorite, Do you want to continue?</string>
    <string name="contin_ue">Continue</string>
    <string name="you_want_delete">Do You Want to Delete this Note ?</string>
    <string name="yes_sure">Yes, Sure</string>
    <string name="no">No</string>
    <string name="you_want_delete_all_notes">Do You Want to Delete All Notes?</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="any_old_data_will_be_deleted">If you have any old data in Backup it will be deleted, Do you want to continue?</string>
    <string name="stop">Stop</string>
    <string name="you_will_restore_any_old_data">You will restore any saved data, Do you want to continue?</string>
    <string name="click_back_again">Please click BACK again to exit</string>
    <string name="fill_here_please">Fill here please</string>
    <string name="wrong_email_or_password">Wrong Email or Password</string>
    <string name="reset">Reset</string>
    <string name="email_sent">Email sent</string>
    <string name="cannot_contain">Cannot contain space or symbol</string>
    <string name="password_must_be">Password must be more than 8 characters</string>
    <string name="password_not_match">Password not match !</string>
    <string name="username_is_already">Username is already exists</string>
    <string name="you_will_send_restored_to_main">You will send the Restored notes to the main list</string>
    <string name="date_and_time">date and time</string>
    <string name="note_title">Note Title</string>
    <string name="what_is_on_your_mind">What is on your mind?</string>
    <string name="save">Save</string>
    <string name="empty_list">Empty List ...</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="send_to_user">Send to user</string>
    <string name="share_external">Share external</string>
    <string name="share_using">Share via</string>


</resources>
