<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="locale"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/textSize_22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/backup_amp_restore"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/textSize_14sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/dimens_20dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/dimens_20dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:background="@drawable/loginbutton_selector"
            android:onClick="Login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dimens_17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimens_5dp"
                android:layout_marginRight="@dimen/dimens_5dp"
                android:text="@string/forget_your_password"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/resetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="updatePassword"
                android:text="@string/reset_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimens_16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/dimens_5dp"
                android:layout_marginRight="@dimen/dimens_5dp"
                android:text="@string/newUser1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:onClick="openRegister"
                android:text="@string/newUser2"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/dimens_16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>