<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:layoutDirection="locale"
    tools:context=".RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimens_16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_0dp"
            android:layout_weight="2.1">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimens_25sp"
                    android:textStyle="bold" />


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/dimens_20dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dimens_16sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:errorTextAppearance="@color/colorPrimary">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_username"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:paddingBottom="@dimen/dimens_20dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dimens_16sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/dimens_20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dimens_16sp" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/register_confirm_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/dimens_20dp"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dimens_16sp" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_20dp"
                    android:background="@drawable/loginbutton_selector"
                    android:onClick="Register"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimens_17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimens_10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/dimens_5dp"
                        android:layout_marginRight="@dimen/dimens_5dp"
                        android:text="@string/oldUser1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/dimens_16sp" />

                    <TextView
                        android:id="@+id/signUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:onClick="openLogin"
                        android:text="@string/oldUser2"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/dimens_16sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>


</ScrollView>