<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAndEditNoteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addCalender_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimens_8dp"
                android:text="@string/date_and_time" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button

                    android:layout_width="@dimen/dimens_100dp"
                    android:layout_height="@dimen/dimens_30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dimens_8dp"
                    android:background="@drawable/button_background"
                    android:onClick="sendlNote_button"
                    android:text="@string/send"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimens_17sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:background="@android:color/darker_gray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@color/colorPrimary">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/noteTitle_editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_8dp"
                android:layout_marginRight="@dimen/dimens_8dp"
                android:gravity="center_vertical"
                android:hint="@string/note_title"
                android:inputType="textCapSentences|textLongMessage"
                android:paddingBottom="@dimen/dimens_20dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:background="@android:color/darker_gray" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            app:errorTextAppearance="@color/colorPrimary">

             <android.support.design.widget.TextInputEditText
                android:id="@+id/noteText_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimens_8dp"
                android:layout_marginRight="@dimen/dimens_8dp"
                android:gravity="top"
                android:hint="@string/what_is_on_your_mind"
                android:inputType="textCapSentences|textMultiLine|textLongMessage"
                android:paddingBottom="@dimen/dimens_20dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dimens_16sp" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_1dp"
            android:layout_marginLeft="@dimen/dimens_8dp"
            android:layout_marginRight="@dimen/dimens_8dp"
            android:background="@android:color/darker_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimens_16dp">

            <Button

                android:layout_width="@dimen/dimens_200dp"
                android:layout_height="@dimen/dimens_45dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:layout_marginRight="@dimen/dimens_3dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="cancelNote_button"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimens_17sp"
                android:textStyle="bold" />

            <Button

                android:layout_width="@dimen/dimens_200dp"
                android:layout_height="@dimen/dimens_45dp"
                android:layout_marginLeft="@dimen/dimens_3dp"
                android:layout_marginTop="@dimen/dimens_20dp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="saveNote_button"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimens_17sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>